Attempt to fix jumpy-ness of site on mobile devices.

--- a/style.css
+++ b/style.css
@@ -40,20 +40,20 @@ a {cursor: url(img/cursor_link.png), auto;}
 
 /* Background ***********/
 
-.bg {
+#bg {
 
     background-image: url(img/bg.png);
     top: 0;
     left: 0;
     position: fixed;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.bg:after {
+#bg:after {
     animation: grain 6s steps(10) infinite;
     background-image: url("https://uploads-ssl.webflow.com/5ac3ff4f55be97394f6d2f9c/5b05cfdf12b5db82badf99f8_grain-texture.png");
     background-size: 180px 180px;
